--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CM & Créateur Gospel | Portfolio Futuriste</title>
+    <title>CM | Reel Maker</title>
+    <link rel="icon" href="img/FB_IMG_1763127805986.jpg" type="image/jpeg">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Ephraim NANA | CM & Videomaker">
+    <meta property="og:description"
+        content="Community Management • Montage Vidéo • Événementiel. Découvrez mon portfolio.">
+    <meta property="og:image" content="img/FB_IMG_1763127805986.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;800&display=swap" rel="stylesheet">
 
