--- a/index.html
+++ b/index.html
@@ -887,9 +887,8 @@
                 <img src="https://scontent.foua5-1.fna.fbcdn.net/v/t39.30808-6/398377226_770163681792944_7165898122605126490_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEv9_OblQfeNegUEUENQVDyripUTfpzbSGuKlRN-nNtIS9RI3Ef6sbW-Pm7LmkTXrfhP7zezssFQ217-uoSIyYy&_nc_ohc=ueK35Y6fV6QQ7kNvwGbYLtJ&_nc_oc=Adk7mi6wrGWlAY5va1iyCXRJZTFVPOh7evND5n3EvKF7--zdV6CP6e-alGEk2vE4SiQ&_nc_zt=23&_nc_ht=scontent.foua5-1.fna&_nc_gid=g9r4FQHyCFTxfNa_LAm5Ew&oh=00_AfjnNMyYKxiE1pl0ujyzObGCH-pa99DMczN87TCMlV3UoQ&oe=69267551"
                     alt="Série de Courts-Métrages Viraux" class="project-img">
                 <div class="project-info">
-                    <h3>Réels Maker - Nadiaksa</h3>
-                    <p>Création et montage d'une série de vidéos courtes pour TikTok/YouTube Shorts, générant plus de
-                        100K vues cumulées.</p>
+                    <h3>Nadiaksa</h3>
+                    <p>Reel Maker et Community Management</p>
                     <div class="project-tags">
                         <span class="tag">#Montage</span>
                         <span class="tag">#Capcut</span>
@@ -903,7 +902,7 @@
                     alt="Refonte Image Artiste" class="project-img">
                 <div class="project-info">
                     <h3>TopTrade-Burkina</h3>
-                    <p>Creation de Contenu</p>
+                    <p>Community Management</p>
                     <div class="project-tags">
                         <span class="tag">#TopTrade</span>
                         <span class="tag">#Import-export</span>
